--- a/views/trainee_views.xml
+++ b/views/trainee_views.xml
@@ -200,6 +200,7 @@
 
     <menuitem name="Trainee" id="bt_management.menu_1" parent="bt_management.menu_root"/>
     <menuitem name="Trainer" id="bt_management.menu_2" parent="bt_management.menu_root"/>
+    <menuitem name="Training" id="bt_management.menu_3" parent="bt_management.menu_root"/>
 
     <!-- actions -->
 
