--- a/views/trainee_batch_views.xml
+++ b/views/trainee_batch_views.xml
@@ -9,12 +9,12 @@
       <field name="name">trainee batch list</field>
       <field name="model">batch.batch</field>
       <field name="arch" type="xml">
-        <tree>
+        <tree string="Trainee Batch">
           <field name="batch"/>
           <field name="start_date"/>
           <field name="end_date"/>
           <field name="location"/>
-          <field name="trainees"/>
+<!--          <field name="trainees"/>-->
           <field name="trainers"/>
         </tree>
       </field>
@@ -26,7 +26,10 @@
       <field name="name">batch form</field>
       <field name="model">batch.batch</field>
       <field name="arch" type="xml">
-        <form>
+        <form string="Trainee Batch">
+          <header>
+            <field name="stage_id" widget="statusbar" options="{'clickable': 1}" domain="[('available_on_batch', '=', True)]"/>
+          </header>
           <sheet>
             <group>
               <group>
@@ -36,9 +39,9 @@
               </group>
               <group>
                <field name="location" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
-                <field name="trainees" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
+<!--                <field name="trainees" options="{'no_quick_create': True, 'no_create_edit' : True}"/>-->
                 <field name="trainers" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
-                <field name="stages" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
+<!--                <field name="stages" options="{'no_quick_create': True, 'no_create_edit' : True}"/>-->
               </group>
             </group>
           </sheet>
