--- a/views/trainee_batch_views.xml
+++ b/views/trainee_batch_views.xml
@@ -13,9 +13,11 @@
           <field name="batch"/>
           <field name="start_date"/>
           <field name="end_date"/>
-          <field name="location"/>
-<!--          <field name="trainees"/>-->
+          <field name="batch_location"/>
+          <field name="trainees"/>
           <field name="trainers"/>
+          <field name="training_topics"/>
+<!--          <field name="state"/>-->
         </tree>
       </field>
     </record>
@@ -38,10 +40,14 @@
                 <field name="end_date"/>
               </group>
               <group>
-               <field name="location" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
-<!--                <field name="trainees" options="{'no_quick_create': True, 'no_create_edit' : True}"/>-->
+               <field name="batch_location" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
+                <field name="trainees" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
                 <field name="trainers" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
+                <field name="training_topics"/>
+                <field name="state"/>
 <!--                <field name="stages" options="{'no_quick_create': True, 'no_create_edit' : True}"/>-->
+
+<!--                do notebook here   -->
               </group>
             </group>
           </sheet>
