--- a/views/trainee_batch_views.xml
+++ b/views/trainee_batch_views.xml
@@ -41,15 +41,27 @@
               </group>
               <group>
                <field name="batch_location" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
-                <field name="trainees" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
-                <field name="trainers" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
-                <field name="training_topics"/>
                 <field name="state"/>
 <!--                <field name="stages" options="{'no_quick_create': True, 'no_create_edit' : True}"/>-->
-
-<!--                do notebook here   -->
               </group>
             </group>
+              <notebook>
+                <page string="Training Record Lines">
+                    <group>
+                      <field name="trainees" options="{'no_quick_create': True, 'no_create_edit' : True, 'no_label' : True}"/>
+                    </group>
+                </page>
+                <page string="Topics Covered">
+                    <group>
+                      <field name="trainers" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
+                    </group>
+                </page>
+                <page string="Attendance">
+                    <group>
+                      <field name="training_topics"/>
+                    </group>
+                </page>
+              </notebook>
           </sheet>
         </form>
       </field>
