--- a/views/training_record_views.xml
+++ b/views/training_record_views.xml
@@ -15,7 +15,7 @@
           <field name="batch_id"/>
 <!--          <field name="training_record_lines"/>-->
 <!--          <field name="topics_covered"/>-->
-          <field name="attendance"/>
+<!--          <field name="attendance"/>-->
         </tree>
       </field>
     </record>
@@ -46,19 +46,19 @@
           <notebook>
 <!--            <page string="Training Record Lines">-->
 <!--                <group>-->
-<!--                    <field name="training_record_lines"/>-->
+<!--                    <field name="training_record_lines" options="{'no_label' : True}"/>-->
 <!--                </group>-->
 <!--            </page>-->
 <!--            <page string="Topics Covered">-->
 <!--                <group>-->
-<!--                  <field name="topics_covered"/>-->
+<!--                  <field name="topics_covered" options="{'no_label' : True}"/>-->
 <!--                </group>-->
 <!--            </page>-->
-            <page string="Attendance">
-                <group>
-                  <field name="attendance"/>
-                </group>
-            </page>
+<!--            <page string="Attendance">-->
+<!--                <group>-->
+<!--                  <field name="attendance" options="{'no_label' : True}"/>-->
+<!--                </group>-->
+<!--            </page>-->
           </notebook>
           </sheet>
         </form>
